tests/snapshots/run_wpt_conformance__coreml_pad_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'constant_val' is missing

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[9] @bytes([177, 77, 75, 205, 187, 213, 55, 76, 144, 83, 105, 212, 149, 211, 252, 209, 76, 84]);
  }

  nodes {
    [padOutput] = pad(operand_0, label="", mode="", value=null);
  }

  outputs { padOutput; }
}
