tests/snapshots/run_wpt_conformance__coreml_pad_float32_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float32 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'constant_val' is missing

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[9] @bytes([228, 27, 182, 65, 38, 89, 169, 193, 201, 82, 183, 194, 15, 233, 134, 65, 19, 15, 114, 66, 150, 34, 141, 194, 182, 146, 114, 194, 93, 135, 63, 194, 127, 115, 137, 66]);
  }

  nodes {
    [padOutput] = pad(operand_0, label="", mode="", value=null);
  }

  outputs { padOutput; }
}
